<resources>
    <string name="app_name">RSBedInfo</string>
    <string name="logo_text">MoonlightSplitter</string>
    <string name="support_api">Support API:</string>
    <string name="api_owner">github.com/satyawikananda/rs-bed-covid-indo-api</string>
    <string name="app_info">Availability of hospitals in Indonesia</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="type">Type</string>
    <string name="data_not_found">Data not Found</string>
    <string name="please_wait">Please wait...</string>
    <string name="address">Address</string>
    <string name="phone">Telepon</string>
    <string name="no_phone_number">Phone number not available</string>
    <string name="no_place">Place not available</string>
    <string name="bed_type">Bed Type</string>
    <string name="available_bed">Available Bed</string>
    <string name="empty_bed">Empty Bed</string>
    <string name="number_queue">Number of Queues</string>
    <string name="time">Time</string>
</resources>