<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="@dimen/_16sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_7sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_bedroom"
                    app:tint="@android:color/white" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/nameBed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:text="Bed Super"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/available_bed"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/availableBed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:fontFamily="@font/montserratlight"
                    android:text="20"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/empty_bed"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/emptyBed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:fontFamily="@font/montserratlight"
                    android:text="5"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/number_queue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/queueNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:fontFamily="@font/montserratlight"
                    android:text="0"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/time"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:fontFamily="@font/montserratlight"
                    android:text="22 Mar 2020"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>